@startuml
' ER-диаграмма Tala (PlantUML)

entity words {
  *id : INT
  --
  word : STRING
  translation : STRING
  part_of_speech : STRING
  ipa : STRING
  hint : STRING
  image_path : STRING
  base_word_id : INT
  frequency : DOUBLE
  level : STRING
  tags : STRING
}

entity word_collection {
  *id : INT
  --
  name : STRING
  description : STRING
}

entity word_collection_entries {
  *collection_id : INT
  *word_id : INT
}

entity lessons {
  *id : INT
  --
  name : STRING
  full_name : STRING
  collection_id : INT
}

entity lesson_card_types {
  *collection_id : INT
  *card_type : STRING
  --
  condition_on_card_type : STRING
  condition_on_value : STRING
  condition_off_card_type : STRING
  condition_off_value : STRING
}

entity lesson_progress {
  *id : INT
  --
  lesson_id : INT
  card_type : STRING
  word_id : INT
  next_review_date : LONG
  interval_minutes : LONG
  ef : DOUBLE
  status : STRING
  info : STRING
}

entity card_history {
  *id : INT
  --
  lesson_id : INT
  card_type : STRING
  word_id : INT
  quality : INT
  date : LONG
}

words ||--o{ words : "base_word_id (самоссылка)"
words ||--o{ word_collection_entries : "слова в коллекциях"
word_collection ||--o{ word_collection_entries : "подборки → слова"
word_collection ||--o{ lessons : "уроки"
word_collection ||--o{ lesson_card_types : "доступные типы карточек"
lessons ||--o{ lesson_progress : "прогресс по уроку"
words ||--o{ lesson_progress : "словарная привязка (nullable)"
lessons ||--o{ card_history : "история ответов по уроку"
words ||--o{ card_history : "словарная привязка к истории"
@enduml